# AutoMLX

./: README.md  pyproject.toml
auto_mlx/: __init__.py
auto_mlx/modeling/: __init__.py  _const.py  _utils.py  auto.py  output.py
tests/: test_auto.py
